added success page

--- a/JlouMart/Pages/Success.cshtml
+++ b/JlouMart/Pages/Success.cshtml
@@ -1,16 +1,43 @@
-﻿@page "/Success"
+﻿@page "/Success/{back}"
 @model JlouMart.Pages.SuccessModel
 @{
+	ViewData["Title"] = Model.Back;
 }
 
 
 <style>
-	.message{
-		height:60vh;
+
+	body {
+		font-family: 'Montserrat', sans-serif;
+		background-color: #85caee;
+		color: #313639;
+	}
+
+	h1 {
+		font-family: Cocogoose;
+		color: #7FB088;
+	}
+
+	.container {
+		padding: 20px;
+		width: 400px;
+		background-color: #ebebeb;
+		margin-top: 15vh;
+	}
+
+	a {
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+	form{
+		height: 80vh;
 	}
 </style>
-
-<div class="container message">
-	<h1>Success!</h1>
-	<a class="btn btn-primary btn-sm" href="../Sikreto">Return to Secret Page</a>
-</div>
+<form method="POST">
+	<div class="container text-center">
+		<i class="fa-sharp fa-solid fa-circle-check fa-5x" style="color: #7FB088; padding-top:2rem;"></i>
+		<h1 styles="font-family: Cocogoose; color: ##7FB088;">Success!</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula, pulvinar id arcu et, viverra scelerisque libero. Donec sit amet tellus ac velit ornare posuere in eu massa.</p>
+		<a type="submit" class="btn btn-success" asp-page="/@Model.Back" >Return</a>
+	</div>
+</form>
