--- a/JlouMart/Pages/Feedback.cshtml
+++ b/JlouMart/Pages/Feedback.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Feedback"
 @model JlouMart.Pages.FeedbackModel
 @{
 }
@@ -63,6 +63,11 @@
 		<span asp-validation-for="Respondent.Message" class="text-danger"></span>
 	</div>
 	<div class="container" style="border-radius: 0 0 25px 25px;">
-		<button type="submit" class="btn btn-primary">Send <i class="fa-regular fa-heart"></i></button>
+		<button type="submit" class="btn btn-primary"> Send <i class="fa-regular fa-heart"></i></button>
+		<!-- 
+			<a class="btn btn-primary btn-sm" asp-page="./Detail" asp-route-back="Feedback">
+				Details
+			</a>
+		-->
 	</div>
 </form>
