--- a/JlouMart/Pages/Shared/_Layout.cshtml
+++ b/JlouMart/Pages/Shared/_Layout.cshtml
@@ -6,12 +6,38 @@
     <title>@ViewData["Title"] - JlouMart</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/de4d547b28.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Pacifico&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        /* width */
+        ::-webkit-scrollbar {
+            width: 10px;
+        }
+
+        /* Track */
+        ::-webkit-scrollbar-track {
+
+            background: #f1f1f1;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #888;
+            
+  border-radius: 10px;
+        }
+
+         /* Handle on hover */
+         ::-webkit-scrollbar-thumb:hover {
+            background: #555;
+         }
+
+    </style>
 </head>
 <body>
     <header>
