--- a/JlouMart/Pages/SuperSecretPage.cshtml
+++ b/JlouMart/Pages/SuperSecretPage.cshtml
@@ -5,13 +5,29 @@
 
 
 <style>
-	.container{
-		height:100vh;
+	.container{ 
+		height:90vh;
 	}
+
+	.tableFixHead {
+		overflow: auto;
+		height: 70vh;
+	}
+
+	.tableFixHead thead th {
+		position: sticky;
+		top: -1px;
+			background-color:azure;
+		z-index:1;
+	}
+
 </style>
 <br>
 <div class="container">
 	<h1>List of Respondents</h1>
+
+<div class="tableFixHead">
+
 	<table class="table">
 		<thead>
 			<tr>
@@ -38,4 +54,5 @@
 			}
 		</tbody>
 	</table>
+	</div>
 </div>
